tests/passing/unit_parameter_single.tails
func foo(x: unit) -> unit:
  x

func tests() -> unit:
  discard foo(pass)
