tests/failing/type_def_recursive.tails
type A = A

func tests() -> unit:
  pass
